enable input field overflow; refine dropdown input field; flight level format bugfix

--- a/fbw-a380x/src/systems/instruments/src/MFD/pages/common/style.scss
+++ b/fbw-a380x/src/systems/instruments/src/MFD/pages/common/style.scss
@@ -126,6 +126,7 @@ $display-mfd-dark-grey: #3c3c3c;
   display: flex;
   flex: 1;
   justify-content: center;
+  height: 40px;
 }
 
 .MFDDropdownLabel {
@@ -396,7 +397,7 @@ $display-mfd-dark-grey: #3c3c3c;
   padding: 4px 2px;
   background-color: $display-background;
   border: 2px inset $display-light-grey;
-  overflow: hidden;
+  overflow: visible;
   height: 37px;
 }
 
